fixed banner alignment

--- a/MainPageDetail.css
+++ b/MainPageDetail.css
@@ -341,15 +341,10 @@ body {
                           margin-top: auto;
                         }
                           .poster1 {
-                            position: absolute;
-                            transform: translateX(10%);
-                            transform: translateY(0%);
-                            max-width: none;
+                            float: left;
                           }
                             .poster2 {
-                              position: absolute;
-                              transform: translateX(490%);
-                              max-width: none;
+                              float: right;
                             }                       
 story-section h2 {
   margin: 0 0 30px 0; /* bottom margin only */
